Bug 422337 - "Bad assembly on m68k" [p=mh+mozilla@glandium.org (Mike Hommey) r=bsmedberg a1.9=damons]